# agentic-rpg

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt
rpg/: __init__.py  agents.py  cli.py  combat.py  config.py  engine.py  evals.py  events.py  judge.py  pipeline.py  players.py  quests.py  schemas.py  speech.py  state.py  tracing.py  web.py  world.py
tests/: conftest.py  test_agents.py  test_combat.py  test_engine.py  test_judge.py  test_memory.py  test_pipeline.py  test_quests.py  test_tracing.py  test_web.py  test_world.py
