[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rpg"
version = "0.1.0"
description = "A graph-grounded, multi-agent fantasy RPG game master where the model handles language and code holds consistency."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pydantic>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
ui = ["streamlit>=1.36"]
tracing = ["langfuse>=3"]

[project.scripts]
rpg = "rpg.cli:main"
rpg-eval = "rpg.evals:main"

[tool.setuptools.packages.find]
include = ["rpg*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
